JVM options for OSX devs